CB-24494 Java 21 upgrade
There are a few changes happened:
- Upgraded to Gradle 8.6
- Updated Docker files' base image to use OpenJDK 21
- Updated Docker files to copy pre-populated nss.cfg as
  this file is not present anymore on the RedHat UBI base image